--- a/Components/index.html
+++ b/Components/index.html
@@ -5,7 +5,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Tip calculator app</title>
+  <title>Tip Calculator app</title>
 
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -13,27 +13,58 @@
   </style>
 </head>
 <body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
+<form>gi
+  <p class="header">Bill</p>
+  <div class="screen">
+      <input type="text">
+      <img scr="">
+      </input>
+  </div>
+    <div>
+      <p>Select Tip %</p>
+      <div class="Tips">
+          <span clas="">5%</span>
+            <span class="">10%</span>
+             <span class="">15%</span>
+             <span class=""> 25%</span>
+            <span class=""> 50%</span>
+          <input class="" placeholder="Custom"></input>
+    </div>
+    </div>
   
+  <p class="header-2">Number of People</p>
+         <div class="screen-2">
+            <input type="text">
+          </input>
+  </div>
+
+    <div class="display">
+      <div clas="Tip">
+          <div clas="Tip-display">
+            <p class="">Tip Amount</p>
+            <span class="">/ person</span>
+          </div>
+          <div clas="Tip-Amt-display">
+              <p>$</p>
+            </div>  
+        </div>
+
+     <div clas="Tip">
+          <div clas="Tip-display">
+            <p class="">Total</p>
+            <span class="">/ person</span>
+          </div>
+          <div clas="Tip-Amt-display">
+              <p>$</p>
+            </div>  
+        </div>
+
+        
+      <input type="text" class=""></input>
+      <input type="Reset" class=""></input>
+  </div>
+    </form>
+
   <div class="attribution">
     Challenge by <a href="" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Williams Godsfavoour</a>.
