--- a/Components/index.html
+++ b/Components/index.html
@@ -1,73 +1,78 @@
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Tip Calculator app</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <title>Tip Calculator app</title>
 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-<form>gi
-  <p class="header">Bill</p>
-  <div class="screen">
-      <input type="text">
-      <img scr="">
-      </input>
-  </div>
-    <div>
-      <p>Select Tip %</p>
-      <div class="Tips">
-          <span clas="">5%</span>
-            <span class="">10%</span>
-             <span class="">15%</span>
-             <span class=""> 25%</span>
-            <span class=""> 50%</span>
-          <input class="" placeholder="Custom"></input>
-    </div>
-    </div>
-  
-  <p class="header-2">Number of People</p>
-         <div class="screen-2">
-            <input type="text">
-          </input>
-  </div>
-
-    <div class="display">
-      <div clas="Tip">
-          <div clas="Tip-display">
-            <p class="">Tip Amount</p>
-            <span class="">/ person</span>
-          </div>
-          <div clas="Tip-Amt-display">
-              <p>$</p>
-            </div>  
-        </div>
-
-     <div clas="Tip">
-          <div clas="Tip-display">
-            <p class="">Total</p>
-            <span class="">/ person</span>
-          </div>
-          <div clas="Tip-Amt-display">
-              <p>$</p>
-            </div>  
-        </div>
-
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
         
-      <input type="text" class=""></input>
-      <input type="Reset" class=""></input>
-  </div>
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
+</head>
+
+<body>
+    <form>
+        <div class="section-1">
+            <p class="header">Bill</p>
+            <div class="screen">
+                <input type="text"></input>
+            </div>
+            <div>
+                <p>Select Tip %</p>
+                <div class="Tips">
+                    <span clas="">5%</span>
+                    <span class="">10%</span>
+                    <span class="">15%</span>
+                    <span class=""> 25%</span>
+                    <span class=""> 50%</span>
+                    <input class="" placeholder="Custom"></input>
+                </div>
+            </div>
+
+            <p class="header-2">Number of People</p>
+            <div class="screen-2">
+                <input type="text"></input>
+            </div>
+        </div>
+        <div class="display">
+            <div clas="Tip">
+                <div clas="Tip-display">
+                    <p class="">Tip Amount</p>
+                    <span class="">/ person</span>
+                </div>
+                <div clas="Tip-Amt-display">
+                    <p>$</p>
+                </div>
+            </div>
+
+            <div clas="Tip">
+                <div clas="Tip-display">
+                    <p class="">Total</p>
+                    <span class="">/ person</span>
+                </div>
+                <div clas="Tip-Amt-display">
+                    <p>$</p>
+                </div>
+            </div>
+
+            <input type="Reset" class=""></input>
+        </div>
     </form>
 
-  <div class="attribution">
-    Challenge by <a href="" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Williams Godsfavoour</a>.
-  </div>
+    <div class="attribution">
+        Challenge by <a href="" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Williams Godsfavoour</a>.
+    </div>
 </body>
+
 </html>
