--- a/Components/index.html
+++ b/Components/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
@@ -26,7 +25,7 @@
         <div class="section-1">
             <p class="header">Bill</p>
             <div class="screen">
-                <input type="text"></input>
+                <input type="text" class="bill-display">
             </div>
             <div>
                 <p>Select Tip %</p>
@@ -36,13 +35,13 @@
                     <span class="">15%</span>
                     <span class=""> 25%</span>
                     <span class=""> 50%</span>
-                    <input class="" placeholder="Custom"></input>
+                    <input class="" placeholder="Custom">
                 </div>
             </div>
 
             <p class="header-2">Number of People</p>
             <div class="screen-2">
-                <input type="text"></input>
+                <input type="text" class="number-display">
             </div>
         </div>
         <div class="display">
@@ -66,7 +65,7 @@
                 </div>
             </div>
 
-            <input type="Reset" class=""></input>
+            <input type="Reset" class="reset">
         </div>
     </form>
 
