--- a/Components/style.css
+++ b/Components/style.css
@@ -1,32 +1,50 @@
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-     :root {
-        --Very-dark-cyan: hsl(183, 100%, 15%);
-        --Dark-grayish-cyan: hsl(186, 14%, 43%);
-        --medium-grayish-cyan: hsl(184, 14%, 56%);
-        --Light-grayish-cyan: hsl(185, 41%, 84%);
-        --lit-grayish-cyan: hsl(189, 41%, 97%);
-        --White: hsl(0, 0%, 100%);
-        --body-font-2: 'Volkhov';
-        --body-font-3: 'noto sans jp';
-        --body-font-4: 'open sans';
-        --normal-font-size: 0.93rem;
-        --small-font-size: 0.81rem;
-    }
-    
-    body {
-        background-color: var(--Light-grayish-cyan);
-    }
-    
-    form {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--White);
-        position: relative;
-        top: 40%;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+ :root {
+    --Very-dark-cyan: hsl(183, 100%, 15%);
+    --Dark-grayish-cyan: hsl(186, 14%, 43%);
+    --medium-grayish-cyan: hsl(184, 14%, 56%);
+    --Light-grayish-cyan: hsl(185, 41%, 84%);
+    --lit-grayish-cyan: hsl(189, 41%, 97%);
+    --White: hsl(0, 0%, 100%);
+    --body-font-1: 'Space Mono';
+    --normal-font-size: 16px;
+    --small-font-size: 18px;
+}
+
+body {
+    background-color: var(--Light-grayish-cyan);
+    font-family: var(--body-font-1);
+    font-weight: 700;
+    color: var(--medium-grayish-cyan);
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--White);
+    position: absolute;
+    margin: auto;
+    gap: 10px;
+    border-radius: 20px;
+    padding: 30px;
+}
+
+input {
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--lit-grayish-cyan);
+    outline: none;
+    padding: 15px;
+}
+
+.bill-display {
+    width: 330px;
+}
