--- a/Components/index.html
+++ b/Components/index.html
@@ -27,15 +27,19 @@
             <div class="screen">
                 <input type="text" class="bill-display">
             </div>
-            <div>
+            <div class="select-tips">
                 <p>Select Tip %</p>
                 <div class="Tips">
-                    <span clas="">5%</span>
-                    <span class="">10%</span>
-                    <span class="">15%</span>
-                    <span class=""> 25%</span>
-                    <span class=""> 50%</span>
-                    <input class="" placeholder="Custom">
+                    <div>
+                        <span class="tips-percentage">5%</span>
+                        <span class="tips-percentage">10%</span>
+                        <span class="tips-percentage">15%</span>
+                    </div>
+                    <div>
+                        <span class="tips-percentage"> 25%</span>
+                        <span class="tips-percentage"> 50%</span>
+                        <input class="custom" placeholder="Custom">
+                    </div>
                 </div>
             </div>
 
