--- a/Components/style.css
+++ b/Components/style.css
@@ -11,6 +11,8 @@
     --medium-grayish-cyan: hsl(184, 14%, 56%);
     --Light-grayish-cyan: hsl(185, 41%, 84%);
     --lit-grayish-cyan: hsl(189, 41%, 97%);
+    --small-grayish-cyan: hsl(185, 66%, 69%);
+    --bordergreen: rgb(22, 189, 152);
     --White: hsl(0, 0%, 100%);
     --body-font-1: 'Space Mono';
     --normal-font-size: 16px;
@@ -24,13 +26,16 @@ body {
     color: var(--medium-grayish-cyan);
 }
 
+p {
+    margin-bottom: 10px;
+}
+
 form {
     display: flex;
     align-items: center;
-    justify-content: center;
     background-color: var(--White);
     position: absolute;
-    margin: auto;
+    top: 20%;
     gap: 10px;
     border-radius: 20px;
     padding: 30px;
@@ -42,9 +47,15 @@ input {
     border: none;
     background-color: var(--lit-grayish-cyan);
     outline: none;
-    padding: 15px;
+    padding: 20px;
     color: var(--Very-dark-cyan);
     font-weight: 700;
+    font-size: 22px;
+    text-align: right;
+}
+
+input:focus {
+    border: 2px solid var(--bordergreen);
 }
 
 .bill-display,
@@ -54,6 +65,12 @@ input {
 
 .custom {
     width: 100px;
+    font-size: 18px;
+    padding: 15px;
+}
+
+.select-tips {
+    margin: 30px 0px 30px 0px;
 }
 
 .tips-percentage {
@@ -64,6 +81,7 @@ input {
     width: 100px;
     height: 40px;
     justify-content: center;
+    cursor: pointer;
 }
 
 .Tips {
@@ -75,6 +93,15 @@ input {
 .display {
     background-color: var(--Very-dark-cyan);
     border-radius: 15px;
-    padding: 20px;
+    padding: 30px;
+}
+
+.reset {
     width: 300px;
+    background-color: var(--small-grayish-cyan);
+    color: var(--Dark-grayish-cyan);
+    height: 45px;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
