--- a/Components/index.html
+++ b/Components/index.html
@@ -49,23 +49,23 @@
             </div>
         </div>
         <div class="display ">
-            <div clas="Tip ">
-                <div clas="Tip-display ">
-                    <p class=" ">Tip Amount</p>
-                    <span class=" ">/ person</span>
+            <div class="Tip ">
+                <div class="Tip-display">
+                    <span class="tip-text">Tip Amount</span>
+                    <span class="tip-text">/ person</span>
                 </div>
-                <div clas="Tip-Amt-display ">
-                    <p>$</p>
+                <div id="Tip-Amt-display ">
+                    <span id=result>$</span>
                 </div>
             </div>
 
-            <div clas="Tip ">
-                <div clas="Tip-display ">
-                    <p class=" ">Total</p>
-                    <span class=" ">/ person</span>
+            <div class="Tip ">
+                <div class="Tip-display ">
+                    <span class="tip-text">Total</span>
+                    <span class="tip-text">/ person</span>
                 </div>
-                <div clas="Tip-Amt-display ">
-                    <p>$</p>
+                <div id="Tip-Amt-display ">
+                    <span id="result">$</span>
                 </div>
             </div>
 
@@ -76,6 +76,7 @@
     <div class="attribution ">
         Challenge by <a href=" " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Williams Godsfavoour</a>.
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
