--- a/Components/style.css
+++ b/Components/style.css
@@ -33,12 +33,15 @@ p {
 form {
     display: flex;
     align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: var(--White);
     position: absolute;
-    top: 20%;
     gap: 30px;
     border-radius: 20px;
     padding: 30px;
+    margin: auto;
 }
 
 input {
