reponsive view update

--- a/Components/index.html
+++ b/Components/index.html
@@ -25,27 +25,27 @@
         <div class="section-1">
             <p class="header">Bill</p>
             <div class="screen">
-                <input type="text" class="bill-display">
+                <input type="text" id="bill-display">
             </div>
             <div class="select-tips">
                 <p>Select Tip %</p>
                 <div class="Tips">
                     <div>
-                        <span class="tips-percentage">5%</span>
-                        <span class="tips-percentage">10%</span>
-                        <span class="tips-percentage">15%</span>
+                        <span id="FivePer">5%</span>
+                        <span id="TenPer">10%</span>
+                        <span id="FifteenPer">15%</span>
                     </div>
                     <div>
-                        <span class="tips-percentage"> 25%</span>
-                        <span class="tips-percentage"> 50%</span>
-                        <input class="custom" placeholder="Custom">
+                        <span id="TwentyFivePer"> 25%</span>
+                        <span id="FifteenPer"> 50%</span>
+                        <input id="custom" placeholder="Custom">
                     </div>
                 </div>
             </div>
 
             <p class="header-2 ">Number of People</p>
             <div class="screen-2 ">
-                <input type="text " class="number-display ">
+                <input type="text " id="number-display ">
             </div>
         </div>
         <div class="display ">
@@ -55,7 +55,7 @@
                     <span class="tip-text">/ person</span>
                 </div>
                 <div id="Tip-Amt-display ">
-                    <span id=result>$</span>
+                    <span id=result-Amount>$</span>
                 </div>
             </div>
 
