--- a/Components/style.css
+++ b/Components/style.css
@@ -92,8 +92,8 @@ input:focus {
 }
 
 .Tips {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
     gap: 20px;
 }
 
@@ -157,6 +157,7 @@ input:focus {
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         gap: 20px;
@@ -166,6 +167,32 @@ input:focus {
         background-color: var(--Very-dark-cyan);
         border-radius: 15px;
         padding: 20px;
+    }
+    .Tips {
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+    }
+    #custom {
+        width: 100px;
+        font-size: 18px;
+        padding: 15px;
+    }
+    .select-tips {
+        margin: 30px 0px 30px 0px;
+    }
+    #FivePer,
+    #TenPer,
+    #FifteenPer,
+    #TwentyFivePer,
+    #FiftyPer {
+        background-color: var(--Very-dark-cyan);
+        border-radius: 4px;
+        display: inline-flex;
+        align-items: center;
+        width: 140px;
+        height: 40px;
+        justify-content: center;
+        cursor: pointer;
     }
 }
 
