--- a/Components/index.html
+++ b/Components/index.html
@@ -69,9 +69,9 @@
         </div>
     </form>
 
-    <div class="attribution ">
+    <!-- <div class="attribution ">
         Challenge by <a href=" " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Williams Godsfavoour</a>.
-    </div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 
