--- a/Components/style.css
+++ b/Components/style.css
@@ -57,6 +57,10 @@ input {
     text-align: right;
 }
 
+#error-message {
+    color: red;
+}
+
 input:focus {
     border: 2px solid var(--bordergreen);
 }
@@ -124,7 +128,7 @@ input:focus {
     font-size: 30px;
 }
 
-.reset {
+#reset {
     width: 300px;
     background-color: var(--small-grayish-cyan);
     color: var(--Dark-grayish-cyan);
@@ -134,11 +138,30 @@ input:focus {
     cursor: pointer;
     padding: 0;
     text-align: center;
-    margin-top: 130px;
+    /* margin-top: 130px; */
 }
 
-.reset:active {
-    background-color: var(--Light-grayish-cyan);
+.resets {
+    background-color: var(--small-grayish-cyan);
+    color: var(--Dark-grayish-cyan);
+    height: 45px;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 0;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    width: 300px;
+    transition: ease-out 2ms;
+}
+
+.resets:active {
+    background-color: aqua;
+}
+
+#reset:active {
+    background-color: aqua;
     border: none;
 }
 
