--- a/Components/index.html
+++ b/Components/index.html
@@ -25,7 +25,7 @@
         <div class="section-1">
             <p class="header">Bill</p>
             <div class="screen">
-                <input type="text" id="bill-display">
+                <input type="text" id="bill-display" onkeyup="calc() ">
                 <p id="error-message"></p>
             </div>
             <div class="select-tips">
@@ -42,8 +42,8 @@
 
             <p class="header-2 ">Number of People</p>
             <div class="screen-2 ">
-                <input type="text" id="number-displays">
-                <p id="error-message"></p>
+                <input type="text" id="number-displays" onkeyup="calc() ">
+                <p id="error-messages"></p>
             </div>
         </div>
         <div class="display ">
@@ -66,7 +66,6 @@
                     <span id="result">$ <span id="results" >0.00</span></span>
                 </div>
             </div>
-            <input value="SUM" onclick="sum()" type="button" class="resets ">
             <input type="Reset" id="reset">
         </div>
     </form>
