--- a/Components/index.html
+++ b/Components/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/images/logo.svg">
     <link rel="stylesheet" href="style.css">
     <title>Tip Calculator app</title>
 
@@ -26,6 +26,7 @@
             <p class="header">Bill</p>
             <div class="screen">
                 <input type="text" id="bill-display" onkeyup="calc() ">
+                <img src="/Assets/images/icon-dollar.svg" class="icon" alt="">
                 <p id="error-message"></p>
             </div>
             <div class="select-tips">
@@ -43,6 +44,7 @@
             <p class="header-2 ">Number of People</p>
             <div class="screen-2 ">
                 <input type="text" id="number-displays" onkeyup="calc() ">
+                <img src="/Assets/images/icon-person.svg" class="icon" alt="">
                 <p id="error-messages"></p>
             </div>
         </div>
