--- a/Components/style.css
+++ b/Components/style.css
@@ -57,6 +57,12 @@ input {
     text-align: right;
 }
 
+.icon {
+    position: relative;
+    top: -2em;
+    left: 1em;
+}
+
 #error-message,
 #error-messages {
     color: red;
@@ -78,7 +84,7 @@ input:focus {
 }
 
 .select-tips {
-    margin: 30px 0px 30px 0px;
+    margin: 10px 0px 10px 0px;
 }
 
 #FivePer,
@@ -106,6 +112,9 @@ input:focus {
     background-color: var(--Very-dark-cyan);
     border-radius: 15px;
     padding: 30px;
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
 }
 
 #result-Amount,
@@ -139,7 +148,7 @@ input:focus {
     cursor: pointer;
     padding: 0;
     text-align: center;
-    margin-top: 130px;
+    margin-top: 100px;
 }
 
 #reset:active {
